# arma_terrain_utils

./: .gitignore  README.md  pyproject.toml  requirements.txt  tasks.todo  tb_all_objects.txt  tb_all_objects_OUT.txt
tests/: gooey_subparser.py  test_add_objects.py  test_create_objects.py  test_library.py  test_random_offset.py  test_tb.py  test_ui.py
tests/testdata/: a3_plants_bush.tml  a3_plants_plant.tml  frl_saaremaa_airfield.txt  test_tb_file.txt  test_tb_file_OUT.txt
utils/: __init__.py  funcs.py  library.py  misc.py  requirements.txt  tb.py  ui.py
utils/process/: add_objects.py  bushes.py  extract_pbos.py  filter_nearby.py  random_offset.py  tml_filter.py
utils/wip/: adjustScale.py  color.py  modToP.py
