[tool.poetry]
name = "arma_terrain_utils"
version = "0.1.0"
description = ""
authors = ["Adanteh <adanteh@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^1.0.0"
numpy = "^1.18.1"
xmltodict = "^0.12.0"
ansimarkup = "^1.4.0"
scipy = "^1.4.1"
gooey = "^1.0.3"

[tool.poetry.dev-dependencies]
flake8 = "^3.7.9"
black = "^19.10b0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
